# sqlx-macro

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_multiple_pk.rs  test_notfound.rs  test_pk.rs  test_simple.rs
