[package]
name = "sqlx-macros"
version = "0.1.1"
edition = "2021"

[lib]
proc_macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.14.2"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }

[dev-dependencies]
sqlx = { version = "0.6.2", features = ["macros", "postgres", "runtime-actix-rustls", "chrono"] }
tokio = { version = "1.25.0", features = ["rt", "macros"] }
